
ClearCaseBootstrapper
----------------------
* Added ClearCaseBootstrapper to plug-in registry under the name "clearcasebootstrapper". - Patch by Esa Laine

ClearCase Sourcecontrol
----------------------
* Fixed bug with ClearCase version 2002.05.00 that hindered sending email. Patch by Ian Colledge and Esa Laine
* Fixed bug where comments with ~ or # were causing modifications to be lost

CruiseControlTagSupport
----------------------
* minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha

DefaultLabelIncrementer
----------------------
* added ability to set a default label - Patch by Garrick Olson

Email Publishers (LinkEmailPublisher and HTMLEmailPublisher)
----------------------
* failure subelements now contain an optional attribute "reportWhenFixed" to specify if the email address should be sent mail when the build is fixed.
* added emailaddressmapper attribute. Patch by Esa Laine

FileSystem Sourcecontrol
----------------------
* Fixed bug where FS was reporting the wrong path for modifications. Patch by Randy Coulman.

FTP support
----------------------
* Added CurrentBuildStatusFTPBootstrapper and CurrentBuildStatusFTPPublisher. Submitted by Matt Albrecht
* Also added an FTPPublisher. (Submitted by Matt Albrecht)

JMX Interface
----------------------
* Added a halt operation on the CruiseControl process JMX interface. Patch from Matt Albrecht
* Renamed start operation to resume.
* Renamed stop operation to pause.

logfile.xsl
----------------------
* Changed the logfile.xsl to have an output method (some Xalan versions gave an error on this). Patch from Matt Albrecht

main.jsp & navigation.jsp
----------------------
* Fix for compatability with Tomcat 5.0. Patch from Robert Pearse

Modification Set
----------------------
* Changed to instruct CC to do a build if a modification occurs in the future. Patch by Geoff Krapf

Project
----------------------