@@ -27,6 +27,10 @@ ClearCase Sourcecontrol
 * Fixed bug with ClearCase version 2002.05.00 that hindered sending email. Patch by Ian Colledge and Esa Laine
 * Fixed bug where comments with ~ or # were causing modifications to be lost
 
+CruiseControlController
+----------------------
+* don't try and deserialize directories that have the same name as the project. Fix by Paul Spencer
+
 CruiseControlTagSupport
 ----------------------
 * minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha
